<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCD49C"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/quiz"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ui"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkchoco"
            android:padding="16dp"
            android:text="@string/verify"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            />
        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:onClick="kembali"
            android:src="@drawable/back"
            android:background="@drawable/custom_button"
            />

    </LinearLayout>


</RelativeLayout>